Added plot_loss option in gaussian_sources Makefile

--- a/gaussian_sources/Makefile
+++ b/gaussian_sources/Makefile
@@ -71,6 +71,12 @@ find_lr: ./lr_find
 		-pretrained ${pretrained} ${pre_path}\
 		-save ${save}
 
+./plot_loss:
+		mkdir -p ${path}
+		python plot_loss.py\
+		${path_model}\
+		${arch}\
+
 clean_norm:
 	rm -r ${norm_path}
 
