added SSIM as evaluation method

--- a/gauss/evaluation/Makefile
+++ b/gauss/evaluation/Makefile
@@ -1,9 +1,17 @@
 all: blob_detection\
+              ssim\
+              msssim\
+              average_ssim\
+              average_msssim\
               visualize_blobs 
 
 average_loss: build/average_loss
 blob_detection: build/blob_detection
 visualize_blobs: build/visualize_blobs
+ssim: build/ssim
+msssim: build/msssim
+average_ssim: build/average_ssim
+average_msssim: build/average_msssim
 
 model=../models/unet_gauss.model
 norm=../data/normalization_factors.csv
@@ -40,6 +48,45 @@ build/visualize_blobs:
 	results/blob_detection.png \
 	-num 20
 
+build/ssim:
+	mkdir -p results/
+	python ssim.py \
+	UNet \
+	$(model) \
+	../data/gauss_samp_valid.h5 \
+	$(norm) \
+	results/ssim.csv \
+	-threshold 0.95
+
+
+build/msssim:
+	mkdir -p results/
+	python msssim.py \
+	UNet \
+	$(model) \
+	../data/gauss_samp_valid.h5 \
+	$(norm) \
+	results/msssim.csv \
+	-threshold 0.975
+
+build/average_ssim:
+	mkdir -p results/
+	python average_ssim.py \
+	UNet \
+	$(model) \
+	../data/gauss_samp_valid.h5 \
+	$(norm) \
+	results/average_ssim.csv \
+	
+build/average_msssim:
+	mkdir -p results/
+	python average_msssim.py \
+	UNet \
+	$(model) \
+	../data/gauss_samp_valid.h5 \
+	$(norm) \
+	results/average_msssim.csv \
+	
 
 #-----------------------------------------
 
