Changed makefile for put_path folder

--- a/gaussian_sources/visualize/Makefile
+++ b/gaussian_sources/visualize/Makefile
@@ -4,7 +4,7 @@ all: visualize_predictions
 visualize_predictions: build/visualize_predictions_done
 
 build/visualize_predictions_done:
-	mkdir -p build
+	mkdir -p ${out_path}
 	python visualize_predictions.py \
 	${arch} \
 	${path_model} \
