Beginning of save_pred

--- a/gaussian_sources/visualize/Makefile
+++ b/gaussian_sources/visualize/Makefile
@@ -2,6 +2,7 @@
 all: visualize_predictions
 
 visualize_predictions: build/visualize_predictions_done
+save_predictions: ./save_pred
 
 build/visualize_predictions_done:
 	mkdir -p build
@@ -12,6 +13,10 @@ build/visualize_predictions_done:
 	${norm_path} \
 	${out_path} \
 	${mode}
+
+./save_pred:
+	python save_predictions.py ${data} \
+	${arch} ${out_path} ${mode}
 
 clean:
 	rm -rf build/
