--- a/gauss/Makefile
+++ b/gauss/Makefile
@@ -30,7 +30,7 @@ testdata: gauss_test
 gauss_samp:	gauss_samp_train\
 				gauss_samp_valid
 gauss_test:     gauss_testset\
-                                test__normalization
+                                test_normalization
 
 #--------------------------------------------------------
 
@@ -42,7 +42,8 @@ calc_normalization: ./data/normalization_factors.csv
 cnn_training: ./training_done
 input_plot: ./data/plots/input_done
 find_lr: ./lr_find
-
+gauss_testset: ./test_data/gauss_testset
+test_normalization: ./test_data/normalization_factors.csv
 #########################################################
 #	Tasks
 #
@@ -50,7 +51,7 @@ find_lr: ./lr_find
 ./data/gauss_fft_done:
 		mkdir -p data/
 		python create_gauss_fft.py ./data\
-		50000 10 True\
+		50000 15 False\
 		-test False -noise False
 		touch ./data/gauss_fft_done
 
@@ -64,7 +65,7 @@ find_lr: ./lr_find
 ./data/gauss_samp_train.h5:
 		python create_mnist_fft_sampled.py\
 		data/gauss_train.h5 data/gauss_samp_train.h5\
-		../sampling/layouts/vlba.txt -train True\
+		../simulations/layouts/vlba.txt -train True\
 		-specific_mask True\
 		-lon -80\
 		-lat 50\
@@ -73,7 +74,7 @@ find_lr: ./lr_find
 ./data/gauss_samp_valid.h5:
 		python create_mnist_fft_sampled.py\
 		data/gauss_valid.h5 data/gauss_samp_valid.h5\
-		../sampling/layouts/vlba.txt -train False\
+		../simulations/layouts/vlba.txt -train False\
 		-specific_mask True\
 		-lon -80\
 		-lat 50\
@@ -89,7 +90,7 @@ find_lr: ./lr_find
 		python train_cnn.py ./data/gauss_samp_train.h5\
 		./data/gauss_samp_valid.h5 ./models/unet_gauss.model\
 		UNet ./data/normalization_factors.csv\
-		100 2e-5 feature_loss -log False\
+		1000 2e-5 feature_loss -log False\
 		-pretrained False ./models/unet_gauss.model \
 		-inspection False
 		touch ./training_done
@@ -104,15 +105,16 @@ find_lr: ./lr_find
 		mkdir -p models/
 		python find_lr.py ./data/gauss_samp_train.h5\
                 ./data/gauss_samp_valid.h5 ./models/unet_gauss.model\
-                UNet ./data/normalization_factors.csv -log False\
+                UNet feature_loss ./data/normalization_factors.csv -log False\
                 -pretrained False ./models/unet_gauss.model\
                 -save True
 
 ./test_data/gauss_testset:
 		mkdir -p test_data/
 		python create_gauss_testset.py ./test_data/gauss_samp_test.h5\
-                12500 15 True -noise False\
-                ../sampling/layouts/vlba.txt\
+                12500 15 False \
+                ../simulations/layouts/vlba.txt\
+		-noise False -specific_mask True \
                 -lon -80\
                 -lat 50\
                 -steps 50
@@ -128,6 +130,7 @@ find_lr: ./lr_find
 
 clean:
 	rm -rf ./data
+	rm -rf ./test_data
 	rm -f ./training_done
 
 clean_training:
