Added noise and preview parameters to .makerc

--- a/gaussian_sources/Makefile
+++ b/gaussian_sources/Makefile
@@ -19,7 +19,6 @@ ${data}/gaussian_sources_train0.h5:
 		mkdir -p ${data}/
 		python simulate_bundles.py \
 		${num_bundles_train} ${num_img} ${size_img} ${data}/gaussian_sources_train \
-		-noise False
 
 ${data}/fft_samp_train0.h5:
 		python create_fft_pairs.py \
@@ -27,8 +26,8 @@ ${data}/fft_samp_train0.h5:
 		-mode train \
 		-fourier ${fourier} \
 		-samp True \
-		-noise True \
-		-preview False \
+		-noise ${noise} \
+		-preview ${preview} \
 		-size ${size_img} \
 		-specific_mask True \
 		-lon -80 \
@@ -39,7 +38,6 @@ ${data}/gaussian_sources_valid0.h5:
 		mkdir -p ${data}/
 		python simulate_bundles.py \
 		${num_bundles_valid} ${num_img} ${size_img} ${data}/gaussian_sources_valid \
-		-noise False
 
 ${data}/fft_samp_valid0.h5:
 		python create_fft_pairs.py \
@@ -47,8 +45,8 @@ ${data}/fft_samp_valid0.h5:
 		-mode valid \
 		-fourier ${fourier} \
 		-samp True \
-		-noise True \
-		-preview False \
+		-noise ${noise} \
+		-preview ${preview} \
 		-size ${size_img} \
 		-specific_mask True \
 		-lon -80 \
@@ -59,7 +57,6 @@ ${data}/gaussian_sources_test0.h5:
 		mkdir -p ${data}/
 		python simulate_bundles.py \
 		${num_bundles_test} ${num_img} ${size_img} ${data}/gaussian_sources_test \
-		-noise False
 
 ${data}/fft_samp_test0.h5:
 		python create_fft_pairs.py \
@@ -67,8 +64,8 @@ ${data}/fft_samp_test0.h5:
 		-mode test \
 		-fourier ${fourier} \
 		-samp True \
-		-noise True \
-		-preview False \
+		-noise ${noise} \
+		-preview ${preview} \
 		-size ${size_img} \
 		-specific_mask True \
 		-lon -80 \
