Fixed bug in plot loss

--- a/gaussian_sources/Makefile
+++ b/gaussian_sources/Makefile
@@ -98,7 +98,7 @@ ${data}/normalization_factors.csv:
 ./plot_loss:
 		mkdir -p ${path}
 		python plot_loss.py\
-		${path_model}\
+		${path}/${path_model}\
 		${arch}\
 
 clean_norm:
