--- a/mnist_cnn/Makefile
+++ b/mnist_cnn/Makefile
@@ -15,15 +15,8 @@ quick_data_and_training: mnist_fft_quick\
 
 #--------------------------------------------------------
 
-mnist_samp:	mnist_samp_train\
-			mnist_samp_valid
-
-#--------------------------------------------------------
-
 mnist_fft: ./data/mnist_fft_done
-mnist_fft_quick: ./data/mnist_fft_done_quick
-mnist_samp_train: ./data/mnist_samp_train.h5
-mnist_samp_valid: ./data/mnist_samp_valid.h5
+mnist_samp: ./data/mnist_samp_done
 calc_normalization: ./data/normalization_factors.csv
 cnn_training: ./training_done
 input_plot: ./data/plots/input_done
@@ -39,29 +32,18 @@ find_lr: ./lr_find
 		./data -size 63 -noise True
 		# touch ./data/mnist_fft_done
 
-./data/mnist_fft_done_quick:
-		mkdir -p data/
-		python create_mnist_fft.py ./../resources/mnist.pkl.gz\
-		./data -test True -noise False
-		touch ./data/mnist_fft_done
-
-./data/mnist_samp_train.h5:
-		python create_mnist_fft_sampled.py\
-		data/mnist_train.h5 data/mnist_samp_train.h5\
-		../sampling/layouts/vlba.txt -train True\
-		-specific_mask True\
-		-lon -80\
-		-lat 50\
+./data/mnist_samp_done:
+		python create_fft_sampled.py \
+		./data/ ./data/ \
+		../simulations/layouts/vlba.txt \
+		-fourier False \
+		-specific_mask True \
+		-lon -80 \
+		-lat 50 \
 		-steps 50
+		# touch ./data/mnist_samp_done
 
-./data/mnist_samp_valid.h5:
-		python create_mnist_fft_sampled.py\
-		data/mnist_valid.h5 data/mnist_samp_valid.h5\
-		../sampling/layouts/vlba.txt -train False\
-		-specific_mask True\
-		-lon -80\
-		-lat 50\
-		-steps 50
+
 
 ./data/normalization_factors.csv:
 		python calculate_normalization.py \
