--- a/mnist_cnn/Makefile
+++ b/mnist_cnn/Makefile
@@ -23,7 +23,7 @@ find_lr: ./lr_find
 ./data/mnist_fft_done:
 		mkdir -p data/
 		python create_mnist_fft.py ./../resources/mnist.pkl.gz\
-		./data -size 63 -noise True
+		./data -size 63 -noise True -bundle_size 500
 		# touch ./data/mnist_fft_done
 
 ./data/mnist_samp_done:
