--- a/gaussian_sources/visualize/Makefile
+++ b/gaussian_sources/visualize/Makefile
@@ -1,5 +1,5 @@
 -include .makerc
-all: visualize_predictions
+all: save_predictions visualize_predictions
 
 visualize_predictions: build/visualize_predictions_done
 save_predictions: ./pred_save
@@ -7,8 +7,6 @@ save_predictions: ./pred_save
 build/visualize_predictions_done:
 	mkdir -p ${out_path}
 	python visualize_predictions.py \
-	${arch} \
-	${path_model} \
 	${out_path} \
 	-fourier ${fourier} \
 	${mode}
