dropping log option adding fourier option

--- a/mnist_cnn/Makefile
+++ b/mnist_cnn/Makefile
@@ -23,7 +23,7 @@ find_lr: ./lr_find
 ./data/mnist_fft_done:
 		mkdir -p data/
 		python scripts/create_mnist_fft.py ./../resources/mnist.pkl.gz\
-		./data -size 63 -noise True -bundle_size 500
+		./data -size 63 -noise False -bundle_size 500
 		# touch ./data/mnist_fft_done
 
 ./data/mnist_samp_done:
@@ -44,10 +44,10 @@ find_lr: ./lr_find
 
 ./training_done:
 		mkdir -p ${path}
-		python train_cnn.py ${samp_train}\
-		${samp_valid} ${path_model}\
+		python train_cnn.py ${data_path}\
+		${path_model}\
 		${arch} ${norm_path}\
-		${epochs} ${lr} ${lr_type} -log ${log}\
+		${epochs} ${lr} ${lr_type} -fourier ${fourier}\
 		-pretrained ${pretrained} ${pre_path}\
 		-inspection ${inspection}
 		# touch ./training_done
