--- a/gaussian_sources/visualize/Makefile
+++ b/gaussian_sources/visualize/Makefile
@@ -14,7 +14,7 @@ build/visualize_predictions_done:
 
 ./pred_save:
 	mkdir -p ${out_path}
-	python save_predictions.py ${data} \
+	python save_predictions.py ${data} ${data}/${norm_path} \
 	${arch} ${path_model} ${out_path} -fourier ${fourier} ${mode}
 
 clean:
