--- a/gaussian_sources/Makefile
+++ b/gaussian_sources/Makefile
@@ -2,13 +2,10 @@
 dataset: simulate_bundles\
 		 fft_samp
 
-simulate_bundles: ${data}/gaussian_sources_train0.h5\
-				  ${data}/gaussian_sources_valid0.h5\
-				  ${data}/gaussian_sources_test0.h5
+simulate_bundles: ${data}/gaussian_sources_train0.h5
 
-fft_samp: ${data}/fft_samp_train0.h5\
-		  ${data}/fft_samp_valid0.h5\
-		  ${data}/fft_samp_test0.h5
+fft_samp: ${data}/fft_samp_train0.h5
+
 calc_normalization: ${data}/normalization_factors.csv
 cnn_training: ./training_done
 find_lr: ./lr_find
@@ -18,52 +15,13 @@ find_lr: ./lr_find
 ${data}/gaussian_sources_train0.h5:
 		mkdir -p ${data}/
 		python simulate_bundles.py \
-		${num_bundles_train} ${num_img} ${size_img} ${data}/gaussian_sources_train \
+		${num_bundles_train} ${num_bundles_valid} ${num_bundles_test} \
+		${num_img} ${size_img} ${data}
 
 ${data}/fft_samp_train0.h5:
 		python create_fft_pairs.py \
 		${data} ${data}/fft_samp_ ../simulations/layouts/vlba.txt \
 		-mode train \
-		-fourier ${fourier} \
-		-amp_phase ${amp_phase} \
-		-samp True \
-		-noise ${noise} \
-		-preview ${preview} \
-		-size ${size_img} \
-		-specific_mask True \
-		-lon -80 \
-		-lat 50 \
-		-steps 50
-
-${data}/gaussian_sources_valid0.h5:
-		mkdir -p ${data}/
-		python simulate_bundles.py \
-		${num_bundles_valid} ${num_img} ${size_img} ${data}/gaussian_sources_valid \
-
-${data}/fft_samp_valid0.h5:
-		python create_fft_pairs.py \
-		${data} ${data}/fft_samp_ ../simulations/layouts/vlba.txt \
-		-mode valid \
-		-fourier ${fourier} \
-		-amp_phase ${amp_phase} \
-		-samp True \
-		-noise ${noise} \
-		-preview ${preview} \
-		-size ${size_img} \
-		-specific_mask True \
-		-lon -80 \
-		-lat 50 \
-		-steps 50
-
-${data}/gaussian_sources_test0.h5:
-		mkdir -p ${data}/
-		python simulate_bundles.py \
-		${num_bundles_test} ${num_img} ${size_img} ${data}/gaussian_sources_test \
-
-${data}/fft_samp_test0.h5:
-		python create_fft_pairs.py \
-		${data} ${data}/fft_samp_ ../simulations/layouts/vlba.txt \
-		-mode test \
 		-fourier ${fourier} \
 		-amp_phase ${amp_phase} \
 		-samp True \
